...
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Detail" id="yKb-6v-Z7b"/>
                    <connections>
                        <outlet property="billAmount" destination="QEk-ws-Nrz" id="ymK-Ur-iLp"/>
...
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Amount" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="38q-s3-tig">
                                                    <rect key="frame" x="116" y="24" width="122" height="29"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
...
                        </connections>
                    </tableView>
                    <tabBarItem key="tabBarItem" title="Bill" image="book" id="lai-hR-3eb"/>
                    <navigationItem key="navigationItem" title="Your Bills" id="Zdf-7t-Un8">
                        <barButtonItem key="rightBarButtonItem" systemItem="search" id="bX4-BM-qH8"/>
...
                                <rect key="frame" x="16" y="140" width="288" height="36"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cqQ-Ac-gK8">
                                        <rect key="frame" x="0.0" y="0.0" width="288" height="36"/>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
...
                        </variation>
                    </view>
                    <tabBarItem key="tabBarItem" title="Add Spending" image="outcome" id="fwY-tQ-jql"/>
                    <connections>
                        <outlet property="datePicker" destination="BIY-e9-iDO" id="zQ8-qb-ahK"/>
...
                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="DoP-4i-3Ig" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Home" id="5O0-5u-B2s"/>
                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="w0n-y4-vsM">
                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Profile" image="toolbar_user" id="GYx-Pe-GGE"/>
                    <connections>
                        <outlet property="dutyOne" destination="aiE-Vq-p9R" id="JSW-fA-VMj"/>
...
                        </variation>
                    </view>
                    <tabBarItem key="tabBarItem" title="Add Income" image="saveMoney" id="Jz9-SD-4ta"/>
                    <connections>
                        <outlet property="datePicker" destination="b77-n8-FwD" id="KwT-du-ZvL"/>
...
