...
    }
    
    // delete item
    override func tableView(_ tableView: UITableView, trailingSwipeActionsConfigurationForRowAt indexPath: IndexPath) -> UISwipeActionsConfiguration? {
        
        // create swipe action
        let action = UIContextualAction(style: .destructive, title: "Delete", handler: {
            (action, view, completionHandler) in
            // get the remove bill
            let removeBill = self.billViewModel.getBillViewModel(index: indexPath.row).bill!
            
            // remove bill
            let removeResult = self.billViewModel.deleteBill(removeBill: removeBill)
...
